[metadata]
name = linse
version = 1.0.0.dev0
license = Apache 2.0
license_files = LICENSE
author = Johann-Mattis List and Robert Forkel
author_email = robert_forkel@eva.mpg.de
description = Linguistic sequence manipulation
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    data
    linguistics
url = https://github.com/lingpy/linse
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
dev =
    flake8
    wheel
    twine
    build
test =
    pytest>=5
    pytest-mock
    pytest-cov

[easy_install]
zip_ok = false

[bdist_wheel]
universal = 1

[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301,F405
max-line-length = 100
exclude = .tox

[tool:pytest]
minversion = 3.1
testpaths = tests
addopts = --cov

[coverage:run]
source =
    linse
    tests

[coverage:report]
show_missing = true
skip_covered = true

[tox:tox]
envlist = py38, py39, py310, py311, py312
isolated_build = true
skip_missing_interpreter = true

[testenv]
deps = .[test]
commands = pytest {posargs}
